# cmake_tutorial

./: CMakeLists.txt  config.h.in  tutorial.cpp
.cache/clangd/index/: tutorial.cpp.CB67853C98795515.idx
include/: config.h
